--- a/workshop/workshop.yaml
+++ b/workshop/workshop.yaml
@@ -1,4 +1,4 @@
-name: Red Hat OpenShift Virtualization Roadshow 
+name: Red Hat OpenShift Virtualization - Hands-on Workshop 
 
 modules:
     activate:
